--- a/Bitad2021/Bitad2021/Bitad2021.csproj
+++ b/Bitad2021/Bitad2021/Bitad2021.csproj
@@ -13,6 +13,7 @@
     <ItemGroup>
         <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
         <PackageReference Include="ReactiveUI" Version="13.3.2" />
+        <PackageReference Include="ReactiveUI.Events.XamForms" Version="14.1.1" />
         <PackageReference Include="ReactiveUI.Fody" Version="13.3.2" />
         <PackageReference Include="ReactiveUI.XamForms" Version="13.3.2" />
         <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
