--- a/Bitad2021/Bitad2021.iOS/Bitad2021.iOS.csproj
+++ b/Bitad2021/Bitad2021.iOS/Bitad2021.iOS.csproj
@@ -106,6 +106,7 @@
         <Reference Include="Xamarin.iOS" />
     </ItemGroup>
     <ItemGroup>
+        <PackageReference Include="Com.Airbnb.Xamarin.Forms.Lottie" Version="4.0.10" />
         <PackageReference Include="ReactiveUI" Version="13.3.2" />
         <PackageReference Include="ReactiveUI.Fody" Version="13.3.2" />
         <PackageReference Include="ReactiveUI.XamForms" Version="13.3.2" />
@@ -117,6 +118,10 @@
             <Project>{1A553534-BAD3-4B51-8115-04C03E66B910}</Project>
             <Name>Bitad2021</Name>
         </ProjectReference>
+    </ItemGroup>
+    <ItemGroup>
+      <BundleResource Include="Resources\fail_cross.json" />
+      <BundleResource Include="Resources\star.json" />
     </ItemGroup>
     <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
