--- a/Bitad2021/Bitad2021/Bitad2021.csproj
+++ b/Bitad2021/Bitad2021/Bitad2021.csproj
@@ -11,6 +11,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Com.Airbnb.Xamarin.Forms.Lottie" Version="4.0.10" />
         <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
         <PackageReference Include="ReactiveUI" Version="13.3.2" />
         <PackageReference Include="ReactiveUI.Events.XamForms" Version="14.1.1" />
@@ -18,5 +19,9 @@
         <PackageReference Include="ReactiveUI.XamForms" Version="13.3.2" />
         <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
         <PackageReference Include="ZXing.Net.Mobile.Forms" Version="2.4.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Controls" />
     </ItemGroup>
 </Project>
