--- a/Bitad2021/Bitad2021.Android/Bitad2021.Android.csproj
+++ b/Bitad2021/Bitad2021.Android/Bitad2021.Android.csproj
@@ -50,7 +50,7 @@
         <PackageReference Include="ReactiveUI" Version="13.3.2" />
         <PackageReference Include="ReactiveUI.Fody" Version="13.3.2" />
         <PackageReference Include="ReactiveUI.XamForms" Version="13.3.2" />
-        <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
+        <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
         <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
         <PackageReference Include="Xamarin.Android.Support.Design" Version="28.0.0.3" />
         <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="28.0.0.3" />
@@ -59,13 +59,14 @@
         <PackageReference Include="Xamarin.Android.Support.v7.MediaRouter" Version="28.0.0.3" />
         <PackageReference Include="Xamarin.AndroidX.MediaRouter" Version="1.2.0" />
         <PackageReference Include="Xamarin.AndroidX.Palette" Version="1.0.0.5" />
-        <PackageReference Include="ZXing.Net.Mobile" Version="2.4.1" />
-        <PackageReference Include="ZXing.Net.Mobile.Forms" Version="2.4.1" />
+        <PackageReference Include="ZXing.Net.Mobile" Version="2.3.1" />
+        <PackageReference Include="ZXing.Net.Mobile.Forms" Version="2.3.1" />
     </ItemGroup>
     <ItemGroup>
         <Compile Include="MainActivity.cs" />
         <Compile Include="Resources\Resource.Designer.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="SplashActivity.cs" />
     </ItemGroup>
     <ItemGroup>
         <None Include="Resources\AboutResources.txt" />
@@ -73,6 +74,8 @@
         <None Include="Properties\AndroidManifest.xml" />
     </ItemGroup>
     <ItemGroup>
+        <AndroidResource Include="Resources\drawable\splash_logo.png" />
+        <AndroidResource Include="Resources\drawable\splash_screen.xml" />
         <AndroidResource Include="Resources\layout\Tabbar.axml" />
         <AndroidResource Include="Resources\layout\Toolbar.axml" />
         <AndroidResource Include="Resources\values\styles.xml" />
