big commit, styling in lecture and speaker, style button in settings

--- a/Bitad2021/Bitad2021.Android/Bitad2021.Android.csproj
+++ b/Bitad2021/Bitad2021.Android/Bitad2021.Android.csproj
@@ -74,6 +74,9 @@
         <None Include="Properties\AndroidManifest.xml" />
     </ItemGroup>
     <ItemGroup>
+        <AndroidResource Include="Resources\drawable-hdpi\info_icon.png" />
+        <AndroidResource Include="Resources\drawable-ldpi\info_icon.png" />
+        <AndroidResource Include="Resources\drawable-xhdpi\info_icon.png" />
         <AndroidResource Include="Resources\drawable\splash_logo.png" />
         <AndroidResource Include="Resources\drawable\splash_screen.xml" />
         <AndroidResource Include="Resources\layout\Tabbar.axml" />
