--- a/Bitad2021/Bitad2021.Android/Properties/AndroidManifest.xml
+++ b/Bitad2021/Bitad2021.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.Bitad2021">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.reset.Bitad2021">
     <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="26" />
-    <application android:label="Bitad2021.Android"></application>
+    <!--TODO:Add round icon -->
+    <application android:label="Bitad 2021" android:icon="@drawable/icon"/>
 </manifest>
