--- a/Bitad2021/Bitad2021.Android/Properties/AndroidManifest.xml
+++ b/Bitad2021/Bitad2021.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.reset.Bitad2021">
-    <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="26" />
-    <!--TODO:Add round icon -->
-    <application android:label="Bitad 2021" android:icon="@drawable/icon"/>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.reset.Bitad2021" android:installLocation="auto">
+	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="26" />
+	<!--TODO:Add round icon -->
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.CAMERA" />
+	<application android:label="Bitad 2021" android:icon="@drawable/icon" />
 </manifest>
