--- a/Bitad2021/Bitad2021.Android/Bitad2021.Android.csproj
+++ b/Bitad2021/Bitad2021.Android/Bitad2021.Android.csproj
@@ -63,6 +63,7 @@
     <PackageReference Include="Xamarin.AndroidX.RecyclerView">
       <Version>1.2.1.3</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.CommunityToolkit" Version="1.2.0" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Android.Support.Design" Version="28.0.0.3" />
