--- a/Bitad2021/Bitad2021.Android/Properties/AndroidManifest.xml
+++ b/Bitad2021/Bitad2021.Android/Properties/AndroidManifest.xml
@@ -3,6 +3,7 @@
 	<uses-sdk android:minSdkVersion="23" android:targetSdkVersion="26" />
 	<!--TODO:Add round icon -->
 	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.CAMERA" />
 	<application android:label="Bitad 2021" android:icon="@drawable/icon" />
 </manifest>
