--- a/Bitad2021/Bitad2021.iOS/Bitad2021.iOS.csproj
+++ b/Bitad2021/Bitad2021.iOS/Bitad2021.iOS.csproj
@@ -110,6 +110,7 @@
         <PackageReference Include="ReactiveUI" Version="13.3.2" />
         <PackageReference Include="ReactiveUI.Fody" Version="13.3.2" />
         <PackageReference Include="ReactiveUI.XamForms" Version="13.3.2" />
+        <PackageReference Include="Xamarin.CommunityToolkit" Version="1.2.0" />
         <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
         <PackageReference Include="ZXing.Net.Mobile.Forms" Version="2.3.1" />
     </ItemGroup>
