--- a/Bitad2021/Bitad2021/Bitad2021.csproj
+++ b/Bitad2021/Bitad2021/Bitad2021.csproj
@@ -18,6 +18,7 @@
         <PackageReference Include="ReactiveUI.Fody" Version="13.3.2" />
         <PackageReference Include="ReactiveUI.XamForms" Version="13.3.2" />
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.11.1" />
+        <PackageReference Include="Xamarin.CommunityToolkit" Version="1.2.0" />
         <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
         <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
         <PackageReference Include="ZXing.Net.Mobile.Forms" Version="2.3.1" />
