--- a/Bitad2021/Bitad2021.Android/Bitad2021.Android.csproj
+++ b/Bitad2021/Bitad2021.Android/Bitad2021.Android.csproj
@@ -89,8 +89,14 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable-hdpi\info_icon.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\lecture_icon.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\workshop_icon.png" />
     <AndroidResource Include="Resources\drawable-ldpi\info_icon.png" />
+    <AndroidResource Include="Resources\drawable-ldpi\lecture_icon.png" />
+    <AndroidResource Include="Resources\drawable-ldpi\workshop_icon.png" />
     <AndroidResource Include="Resources\drawable-xhdpi\info_icon.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\lecture_icon.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\workshop_icon.png" />
     <AndroidResource Include="Resources\drawable\bitad_logo.png">
       <SubType>Designer</SubType>
     </AndroidResource>
